Remove anchor decoration, give footer space from content, ensure mobile menu icons are 100 width, correct sign up from spilling over div in mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,14 @@ body {
     color:rgb(16, 111, 151) !important;
 }
 
+a {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+
 .hr-style {
     border-top: 1px solid black;
     margin-top: 20px;
@@ -39,8 +47,13 @@ body {
     max-width: 100vw;
 }
 
+.footer-space {
+    height: 20vh;
+}
+
 .footer div {
    font-size: 3rem;
+   margin-top: 3rem;
 }
 
 .footer-logo {
@@ -99,18 +112,26 @@ color:rgb(219, 83, 117) !important;
     background-color: 	rgb(251, 209, 162);
     align-items: flex-start !important;
     padding-left: 20vw;
+    padding-top: 1rem;
 }
 
 .book {
     background-color:rgb(125, 207, 182);
     align-items: flex-end !important;
     padding-right: 20vw;
+    padding-top: 1rem;
+}
+
+.sign_up {
+    font-size: 2rem;
 }
 
 .contact {
     background-color:	rgb(16, 111, 151);
     align-items: flex-start !important;
     padding-left: 20vw;
+    padding-top: 1rem;
+    margin-bottom: 30vh;
 }
 
 .menu, .book, .contact  {
@@ -118,7 +139,8 @@ color:rgb(219, 83, 117) !important;
     display: flex;
     font-weight: 900;
     font-size: 7rem;
-    margin: 1vh;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 .booking-list-scroller {
@@ -147,6 +169,11 @@ color:rgb(219, 83, 117) !important;
     background-size: cover;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.menu p:hover, .book p:hover, .contact p:hover,
+.menu2 p:hover, .book2:hover p, .contact2 p:hover {
+    color:rgb(219, 83, 117) !important;
 }
 
 .menu2 p, .book2 p, .contact2 p {
@@ -225,7 +252,7 @@ color:rgb(219, 83, 117) !important;
 
 /* disappears the circles from medium and larger screens */
 @media (max-width: 768px) {
-    .visible-sml {
+    .visible-lg {
       display: none;
     }
 
@@ -236,7 +263,7 @@ color:rgb(219, 83, 117) !important;
 
 /* disappears the mobile block colours on larger devices */
 @media (min-width: 767px) {
-    .visible-lg {
+    .visible-sml {
       display: none;
     }
 }
@@ -247,7 +274,8 @@ color:rgb(219, 83, 117) !important;
         display: flex;
         font-weight: 700;
         font-size: 4rem;
-        margin: 1vh;
+        margin-top: 1vh;
+        margin-bottom: 1vh;
     }
 
     .byte {
